@@ -6,7 +6,7 @@
     <parent>
         <artifactId>autores</artifactId>
         <groupId>uk.autores</groupId>
-        <version>11.1.2</version>
+        <version>11.1.5</version>
     </parent>
 
     <artifactId>processing</artifactId>
@@ -91,6 +91,7 @@
                     <failOnWarnings>true</failOnWarnings>
                     <serialwarn>true</serialwarn>
                     <excludePackageNames>uk.autores.processing.handlers.debug</excludePackageNames>
+                    <additionalOptions>--allow-script-in-comments</additionalOptions>
                 </configuration>
             </plugin>
             <!-- coverage -->
@@ -188,12 +189,6 @@
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <parallel>all</parallel>
-                    <argLine>
-                        --add-opens uk.autores.processing/uk.autores.processing=uk.autores.processing.test
-                        --add-opens uk.autores.processing/uk.autores.processing.handlers=uk.autores.processing.test
-                        --add-opens uk.autores.processing/uk.autores.processing.handlers.debug=uk.autores.processing.test
-                        --add-exports uk.autores.processing/uk.autores.processing=uk.autores.processing.test
-                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
